# ML_Poetry

./: README.md
Palindrome/: pyproject.toml
Palindrome/machine/: ispalindrome.py  palindrome.py
Palindrome/tests/: test_ispalindrome.py  test_palindrome.py
